[tool.poetry]
name = "deployer"
version = "0.0.0"
description = ""
authors = ["onerandomusername <genericusername414@gmail.com>"]
readme = "README.md"
packages = [{ include = "deployer", from = 'src' }]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
httpx = "^0.21.1"
dulwich = "^0.20.26"
click = "^8.0.3"
platformdirs = "^2.4.0"

[tool.poetry.dev-dependencies]
# always needed
pre-commit = "~=2.1"
taskipy = "^1.6.0"
# linting
black = "^21.7b0"
flake8 = "^4.0"
flake8-annotations = "~=2.3"
flake8-bugbear = "~=20.1"
flake8-docstrings = "~=1.5"
flake8-isort = "^4.0.0"
flake8-string-format = "~=0.3"
flake8-tidy-imports = "~=4.1"
flake8-todo = "~=0.7"
isort = "^5.9.2"
pep8-naming = "~=0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py38']
include = '\.pyi?$'

[tool.taskipy.tasks]
black = { cmd = "black --check .", help = "dry run of black" }
flake8 = { cmd = "python -m flake8", help = "Lints code with flake8" }
lint = { cmd = "pre-commit run --all-files", help = "Checks all files for CI errors" }
lock = { cmd = 'poetry lock --no-update && task export --docs', help = 'Relock the dependencies without updating them. Also runs the export scripts' }
precommit = { cmd = "pre-commit install --install-hooks", help = "Installs the precommit hook" }
